--- a/a-basic/src/app/app.component.html
+++ b/a-basic/src/app/app.component.html
@@ -1,3 +1,15 @@
-<span>{{ title }} app is running!</span>
-<hr />
-<app-servers></app-servers>
+<div class="container">
+  <app-cockpit
+    (serverCreated)="onServerAdded($event)"
+    (blueprintCreated)="onBlueprintAdded($event)"
+  ></app-cockpit>
+  <hr />
+  <div class="row">
+    <div class="col-xs-12">
+      <app-server-element
+        *ngFor="let element of serverElements"
+        [element]="element"
+      ></app-server-element>
+    </div>
+  </div>
+</div>
