--- a/0-projects/recipe-app/src/app/shop/shop.component.html
+++ b/0-projects/recipe-app/src/app/shop/shop.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shop-edit></app-shop-edit>
+    <app-shop-edit
+      (ingredientAdded)="onIngredientAdded($event)"
+    ></app-shop-edit>
     <hr />
     <ul class="list-group">
       <a
