Adding segment about custom directive

--- a/a-basic/src/app/app.component.html
+++ b/a-basic/src/app/app.component.html
@@ -6,6 +6,9 @@
   <hr />
   <div class="row">
     <div class="col-xs-12">
+      <p appHighlight>Testing!</p>
+      <p appBetterHighlight>Testing!</p>
+
       <app-server-element
         *ngFor="let element of serverElements"
         [element]="element"
