Adding services to project

--- a/0-projects/recipe-app/src/app/shop/shop-edit/shop-edit.component.html
+++ b/0-projects/recipe-app/src/app/shop/shop-edit/shop-edit.component.html
@@ -18,7 +18,9 @@
           <button
             class="btn btn-success"
             type="submit"
-            (click)="onAddItem(); $event.stopPropagation()"
+            (click)="
+              onAddItem(); $event.stopPropagation(); $event.preventDefault()
+            "
           >
             Add
           </button>
