--- a/0-projects/recipe-app/src/app/app.component.html
+++ b/0-projects/recipe-app/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (typeSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="loadedType === 'recipe'"></app-recipes>
-      <app-shop *ngIf="loadedType === 'shop'"></app-shop>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
