--- a/0-projects/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/0-projects/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -27,8 +27,8 @@
             >Add to shop</a
           >
         </li>
-        <li><a href="#">Edit</a></li>
-        <li><a href="#">Delete</a></li>
+        <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit</a></li>
+        <li><a style="cursor: pointer">Delete</a></li>
       </ul>
     </div>
   </div>
