--- a/0-projects/recipe-app/src/app/recipes/recipes.component.html
+++ b/0-projects/recipe-app/src/app/recipes/recipes.component.html
@@ -3,12 +3,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      *ngIf="selectedRecipeItem; else infoText"
-      [recipe]="selectedRecipeItem"
-    ></app-recipe-detail>
-    <ng-template #infoText>
-      <p>Please select recipe!</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
