--- a/0-projects/recipe-app/src/app/header/header.component.html
+++ b/0-projects/recipe-app/src/app/header/header.component.html
@@ -12,8 +12,11 @@
         (window:resize)="collapsed = true"
     -->
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
           <a [routerLink]="['/recipes']">Recipes</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a [routerLink]="['/auth']">Authenticate</a>
         </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/shop']">Shopping List</a>
@@ -21,7 +24,10 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated">
+          <a style="cursor: pointer" (click)="onLogout()">Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer" class="dropdown-toggle" role="button">
             Menage <span class="caret"></span
           ></a>
