--- a/0-projects/recipe-app/src/app/auth/auth.component.html
+++ b/0-projects/recipe-app/src/app/auth/auth.component.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="errorMsg">
-      <p>{{ errorMsg }}</p>
-    </div>
+    <app-alert
+      [message]="errorMsg"
+      *ngIf="errorMsg"
+      (closeModal)="onCloseModal()"
+    ></app-alert>
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading></app-loading>
     </div>
