Adding brakpoint mixin

--- a/0-projects/practicing/my-components/src/app/components/logo/logo.component.html
+++ b/0-projects/practicing/my-components/src/app/components/logo/logo.component.html
@@ -1,3 +1,5 @@
 <div class="logo">
-  <fa-icon [icon]="faCoffee"></fa-icon>
+  <a class="logo__element" href="">
+    <fa-icon [icon]="faCoffee"></fa-icon>
+  </a>
 </div>
