--- a/0-projects/practicing/my-components/src/app/components/navigation/navigation.component.html
+++ b/0-projects/practicing/my-components/src/app/components/navigation/navigation.component.html
@@ -3,7 +3,9 @@
     <app-logo></app-logo>
   </div>
 
-  <!-- navigation -->
+  <app-central-nav></app-central-nav>
 
-  <div class="main-nav__controls"></div>
+  <div class="main-nav__controls">
+    <app-language-switcher></app-language-switcher>
+  </div>
 </div>
