Adding download component

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="main-root">
-  <app-navigation></app-navigation>
+  <section>
+    <h1 class="headline">Navigation - component</h1>
+    <app-navigation></app-navigation>
+  </section>
+  <section>
+    <h1 class="headline">Download - component</h1>
+    <app-download-list></app-download-list>
+  </section>
 </div>
