--- a/0-projects/practicing/my-components/src/app/components/download/download-list/download-list.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-list/download-list.component.html
@@ -1,1 +1,6 @@
-<p>download-list works!</p>
+<div class="download">
+  <app-download-row
+    *ngFor="let item of myData"
+    [item]="item"
+  ></app-download-row>
+</div>
