--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -7,4 +7,9 @@
     <h1 class="headline">Download - component</h1>
     <app-download-list></app-download-list>
   </section>
+  <section>
+    <h1 class="headline">Modal - component</h1>
+    <button type="button" (click)="myModal.openModal()">Open Modal</button>
+    <app-modal #myModal>test</app-modal>
+  </section>
 </div>
