--- a/0-projects/practicing/my-components/src/styles/css/_display.scss
+++ b/0-projects/practicing/my-components/src/styles/css/_display.scss
@@ -16,6 +16,14 @@
   }
 }
 
+.none {
+  display: none !important;
+}
+
+.block {
+  display: block !important;
+}
+
 .text-center {
   @include respond-to('md') {
     justify-content: center;
