--- a/0-projects/practicing/my-components/src/app/components/modal/modal.component.html
+++ b/0-projects/practicing/my-components/src/app/components/modal/modal.component.html
@@ -13,10 +13,10 @@
   tabindex="-1"
   role="dialog"
 >
-  <div class="modal-dialog modal-dialog-scroll" role="document">
+  <div class="modal-dialog" role="document">
     <button
       type="button"
-      class="btn btn-close close"
+      class="close"
       [ngClass]="closeBtnModifier"
       (click)="closeModal()"
       aria-label="Close"
