--- a/0-projects/practicing/my-components/src/styles/css/atoms/_modal.scss
+++ b/0-projects/practicing/my-components/src/styles/css/atoms/_modal.scss
@@ -1,120 +1,10 @@
-.modal {
-  pointer-events: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1050;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
+@import '../breakpoints';
 
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 0.5rem;
-  pointer-events: none;
-
-  .modal.fade & {
-    transition: transform 0.3s ease-out;
-    transform: translate(0, -50px);
-  }
-
-  .modal.show & {
-    transform: none;
-  }
-
-  .close {
-    position: absolute;
-    right: -25px;
-    top: -25px;
-    z-index: 1070;
-    transition: transform 0.3s ease-in-out;
-    cursor: pointer;
-    pointer-events: auto;
-
-    &:focus,
-    &:hover {
-      color: black;
-      box-shadow: none;
-    }
-
-    @include respond-to('md') {
-      right: 0;
-      top: 7px;
-      font-size: 24px;
-      box-shadow: none;
-      border-radius: 0;
-      border: 0;
-      background-color: transparent;
-    }
-  }
-}
-
-.modal-dialog-scroll {
-  display: flex;
-
-  .modal-content {
-    overflow: hidden;
-  }
-
-  .modal-header,
-  .modal-footer {
-    flex-shrink: 0;
-  }
-
-  .modal-body {
-    overflow-y: auto;
-  }
-
-  @include respond-to('md') {
-    height: 100%;
-    max-height: 100%;
-    margin: 0;
-
-    .modal-content {
-      height: 100%;
-      width: 100vw;
-      overflow: hidden;
-      padding-bottom: 30px;
-    }
-  }
-}
-
-.modal-dialog-centered {
-  display: flex;
-  align-items: center;
-  min-height: calc(1005 - 0.5rem * 2);
-
-  &::before {
-    content: '';
-    display: block;
-    height: calc(1005 - 0.5rem * 2);
-  }
-
-  &.modal-dialog-scroll {
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-
-    .modal-content {
-      max-height: none;
-    }
-
-    &::before {
-      content: none;
-    }
-  }
-}
-
-// Real modal
 .modal-content {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  height: 98vh;
   pointer-events: auto;
   background-color: #fff;
   border-radius: 0.3rem;
@@ -122,85 +12,32 @@
   outline: 0;
 
   @include respond-to('md') {
-    border-radius: 0;
-    box-shadow: none;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 0.5;
-  }
-}
-
-@keyframes fadeInBlack {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 0.5 * 2;
-  }
-}
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1040;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
-  animation: 0.3s ease-in-out forwards;
-
-  &.fade {
-    opacity: 0;
-  }
-  &.show {
-    animation-name: fadeIn;
+    height: 90vh;
   }
 
-  &--black {
-    &.show {
-      animation-name: fadeInBlack;
-    }
+  .modal-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border-bottom: 1px solid #e0e1e2;
+    border-radius: 0.3rem;
+    max-height: 4.5rem;
   }
-}
 
-.modal-header {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid #e0e1e2;
-  border-radius: 0.3rem;
-}
-
-.modal-title {
-  margin-bottom: 0;
-  line-height: 1.5;
-}
-
-.modal-body {
-  position: relative;
-  flex: 1 1 auto;
-  padding: 1rem;
-}
-
-.modal-footer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 1rem;
-  border-top: 1px solid #e0e1e2;
-  border-radius: 0.3rem;
-
-  > :not(:first-child) {
-    margin-left: 0.25rem;
+  .modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+    overflow-y: scroll;
   }
-  > :not(:last-child) {
-    margin-right: 0.25rem;
+
+  .modal-footer {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    border-top: 1px solid #e0e1e2;
+    border-radius: 0.3rem;
+    max-height: 4.5rem;
   }
 }
