Adding truncate directive and css for scrollbar

--- a/0-projects/practicing/my-components/src/app/components/download/download-row/download-row.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-row/download-row.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="download-row__separator"></div>
   <div class="download-row__element-wrapper">
-    <div class="download-row__element download-row--big">
+    <div appTruncateOverflow class="download-row__element download-row--big">
       {{ item.title }}
     </div>
     <div class="download-row__separator sm-hide"></div>
