--- a/0-projects/practicing/my-components/src/styles/css/atoms/_headline.scss
+++ b/0-projects/practicing/my-components/src/styles/css/atoms/_headline.scss
@@ -1,6 +1,7 @@
 .headline {
   position: relative;
   padding: 0.4em 0;
+  margin: 0;
   margin-bottom: 1em;
   line-height: 1.2;
   font-weight: 900;
