--- a/0-projects/practicing/my-components/src/app/components/download/download-info/download-info.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-info/download-info.component.html
@@ -1,1 +1,21 @@
-<p>download-info works!</p>
+<div class="modal-content download-info">
+  <div class="modal-header download-info__header-wrapper">
+    <app-download-info-header [item]="item"></app-download-info-header>
+  </div>
+
+  <div class="modal-body">
+    <app-download-info-body
+      [item]="item"
+      [show]="showInfo"
+    ></app-download-info-body>
+  </div>
+
+  <div class="modal-footer">
+    <app-download-info-footer
+      [ngStyle]="{ width: '100%' }"
+      [data]="downloadDocument"
+      (setBodyLayout)="onChangeBodyLayout($event)"
+      [isActive]="showInfo"
+    ></app-download-info-footer>
+  </div>
+</div>
