--- a/0-projects/practicing/my-components/src/styles/css/atoms/_modal.scss
+++ b/0-projects/practicing/my-components/src/styles/css/atoms/_modal.scss
@@ -35,7 +35,7 @@
   .modal-footer {
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding: 0;
     border-top: 1px solid #e0e1e2;
     border-radius: 0.3rem;
     max-height: 4.5rem;
