adding button atom

--- a/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-footer/download-info-footer.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-footer/download-info-footer.component.html
@@ -20,6 +20,6 @@
   <div class="info-footer__separator"></div>
 
   <div class="info-footer__element info-footer--big">
-    <button>Test</button>
+    <app-button text="Download" [downloadLink]="data"></app-button>
   </div>
 </div>
