Set up file for download

--- a/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-body/download-info-body.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-body/download-info-body.component.html
@@ -17,6 +17,7 @@
     <app-multi-tile
       *ngFor="let document of item.documents"
       [document]="document"
+      (setFile)="setDownloadFIle($event)"
     ></app-multi-tile>
   </div>
 </div>
