--- a/0-projects/practicing/my-components/src/app/components/download/download-info/download-info.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-info/download-info.component.html
@@ -7,6 +7,7 @@
     <app-download-info-body
       [item]="item"
       [show]="showInfo"
+      (setFile)="onDownloadFileChange($event)"
     ></app-download-info-body>
   </div>
 
