Update download tile component

--- a/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-body/multi-tile/multi-tile.component.html
+++ b/0-projects/practicing/my-components/src/app/components/download/download-info/download-info-body/multi-tile/multi-tile.component.html
@@ -1,7 +1,7 @@
 <div class="multi-tile">
   <div class="multi-tile__element">
     <input
-      class="radio-btn radio-btn--red"
+      class="radio-btn radio-btn--circle-red"
       type="radio"
       (change)="toggleState($event)"
     />
