Adding components to main page

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -12,4 +12,14 @@
     <button type="button" (click)="myModal.openModal()">Open Modal</button>
     <app-modal #myModal>test</app-modal>
   </section>
+  <section>
+    <h1 class="headline">header-box - component</h1>
+    <app-header-box>
+      <p>Some text goes here</p>
+    </app-header-box>
+  </section>
+  <section>
+    <h1 class="headline">Radio btn - component</h1>
+    <input class="radio-btn radio-btn--circle-red" type="radio" />
+  </section>
 </div>
