Adding morphic radio btn

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -20,6 +20,6 @@
   </section>
   <section>
     <h1 class="headline">Radio btn - component</h1>
-    <input class="radio-btn radio-btn--circle-red" type="radio" />
+    <app-radio-buttons></app-radio-buttons>
   </section>
 </div>
