Outsorce code to atom

--- a/0-projects/practicing/my-components/src/app/components/radio-buttons/radio-buttons.component.html
+++ b/0-projects/practicing/my-components/src/app/components/radio-buttons/radio-buttons.component.html
@@ -3,13 +3,13 @@
     <input class="radio-btn radio-btn--circle-red" type="radio" />
   </div>
   <div class="radio-bts__elements radio-bts--morph">
-    <label class="radio-bts__wrapper">
-      <input type="radio" name="a" class="radio-bts__check" />
-      <fa-icon class="radio-bts__icon" [icon]="faCheck"></fa-icon>
+    <label class="radio-btn-morphic">
+      <input type="radio" name="a" class="radio-btn-morphic__check" />
+      <fa-icon class="radio-btn-morphic__icon" [icon]="faCheck"></fa-icon>
     </label>
-    <label class="radio-bts__wrapper">
-      <input type="radio" name="a" class="radio-bts__check" />
-      <fa-icon class="radio-bts__icon" [icon]="faTimes"></fa-icon>
+    <label class="radio-btn-morphic">
+      <input type="radio" name="a" class="radio-btn-morphic__check" />
+      <fa-icon class="radio-btn-morphic__icon" [icon]="faTimes"></fa-icon>
     </label>
   </div>
 </div>
