--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -13,7 +13,7 @@
     <app-modal #myModal>test</app-modal>
   </section>
   <section>
-    <h1 class="headline">header-box - component</h1>
+    <h1 class="headline">Header-box - component</h1>
     <app-header-box>
       <p>Some text goes here</p>
     </app-header-box>
@@ -21,5 +21,9 @@
   <section>
     <h1 class="headline">Radio btn - component</h1>
     <app-radio-buttons></app-radio-buttons>
+  </section>
+  <section>
+    <h1 class="headline">Checkbox - component</h1>
+    <app-checkboxes></app-checkboxes>
   </section>
 </div>
