Adding more checkboxes

--- a/0-projects/practicing/my-components/src/app/components/checkboxes/checkboxes.component.html
+++ b/0-projects/practicing/my-components/src/app/components/checkboxes/checkboxes.component.html
@@ -5,11 +5,22 @@
       <fa-icon class="checkbox-morphic__icon" [icon]="faPowerOff"></fa-icon>
     </label>
   </div>
+  <div class="checkbox-bts__elements checkbox-bts--morph-2">
+    <label class="checkbox-morphic-2">
+      <input type="checkbox" name="a" class="checkbox-morphic-2__check" />
+      <div class="checkbox-morphic-2__icon-wrap">
+        <fa-icon class="checkbox-morphic-2__icon" [icon]="faPowerOff"></fa-icon>
+      </div>
+    </label>
+  </div>
   <div class="checkbox-bts__elements checkbox-bts--switch">
     <label class="checkbox-switch">
       <input type="checkbox" name="a" class="checkbox-switch__input" />
       <span class="checkbox-switch__check"></span>
       <span class="checkbox-switch__btn"></span>
     </label>
+  </div>
+  <div class="checkbox-bts__elements checkbox-bts--switch">
+    <input type="checkbox" name="a" class="checkbox-switch-2" />
   </div>
 </div>
