Adding rating component

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -26,4 +26,8 @@
     <h1 class="headline">Checkbox - component</h1>
     <app-checkboxes></app-checkboxes>
   </section>
+  <section>
+    <h1 class="headline">Favorite - component</h1>
+    <app-rating></app-rating>
+  </section>
 </div>
