Adding check list

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -30,4 +30,8 @@
     <h1 class="headline">Favorite - component</h1>
     <app-rating></app-rating>
   </section>
+  <section>
+    <h1 class="headline">Check list - component</h1>
+    <app-check-list></app-check-list>
+  </section>
 </div>
