Adding isometric button

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -34,4 +34,8 @@
     <h1 class="headline">Check list - component</h1>
     <app-check-list></app-check-list>
   </section>
+  <section>
+    <h1 class="headline">Buttons - component</h1>
+    <app-buttons></app-buttons>
+  </section>
 </div>
