--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -38,4 +38,8 @@
     <h1 class="headline">Buttons - component</h1>
     <app-buttons></app-buttons>
   </section>
+  <section>
+    <h1 class="headline">Buttons - component</h1>
+    <app-loaders></app-loaders>
+  </section>
 </div>
