adding more loaders

--- a/0-projects/practicing/my-components/src/app/components/loaders/loaders.component.html
+++ b/0-projects/practicing/my-components/src/app/components/loaders/loaders.component.html
@@ -16,4 +16,5 @@
     <span class="loader-2__element"><i class="loader-2__letter">g</i></span>
     <span class="loader-2__element"><i class="loader-2__letter">.</i></span>
   </div>
+  <div class="loader-3"></div>
 </div>
