--- a/0-projects/practicing/my-components/src/app/components/loaders/loaders.component.scss
+++ b/0-projects/practicing/my-components/src/app/components/loaders/loaders.component.scss
@@ -1,5 +1,6 @@
 @import 'src/styles/css/atoms/loader';
 @import 'src/styles/css/atoms/loader-2';
+@import 'src/styles/css/atoms/loader-3';
 
 .loaders {
   display: flex;
