Adding input fields

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -39,7 +39,11 @@
     <app-buttons></app-buttons>
   </section>
   <section>
-    <h1 class="headline">Buttons - component</h1>
+    <h1 class="headline">Loaders - component</h1>
     <app-loaders></app-loaders>
+  </section>
+  <section>
+    <h1 class="headline">Inputs - component</h1>
+    <app-inputs></app-inputs>
   </section>
 </div>
