Adding slide in component

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -46,4 +46,16 @@
     <h1 class="headline">Inputs - component</h1>
     <app-inputs></app-inputs>
   </section>
+  <section>
+    <h1 class="headline">Nav with dropdown - component</h1>
+    <app-nav-with-dropdown></app-nav-with-dropdown>
+  </section>
+  <section>
+    <h1 class="headline">In page slider - component</h1>
+    <app-in-page-slider></app-in-page-slider>
+  </section>
+  <section>
+    <h1 class="headline">Panda login - component</h1>
+    <app-panda-login></app-panda-login>
+  </section>
 </div>
