--- a/0-projects/practicing/my-components/src/app/components/in-page-slider/in-page-slider.component.scss
+++ b/0-projects/practicing/my-components/src/app/components/in-page-slider/in-page-slider.component.scss
@@ -2,7 +2,7 @@
   position: absolute;
   right: -400px;
   width: 400px;
-  height: 400px;
+  min-height: 400px;
   background-color: lightgray;
   border-radius: 5px;
   transition: 0.5s ease-out;
@@ -10,7 +10,6 @@
   &__wrapper {
     width: 400px;
     color: black;
-    position: absolute;
     border-radius: 5px;
   }
 
