Adding more components

--- a/0-projects/practicing/my-components/src/app/app.component.html
+++ b/0-projects/practicing/my-components/src/app/app.component.html
@@ -52,7 +52,9 @@
   </section>
   <section>
     <h1 class="headline">In page slider - component</h1>
-    <app-in-page-slider></app-in-page-slider>
+    <app-in-page-slider>
+      <app-panda-login></app-panda-login>
+    </app-in-page-slider>
   </section>
   <section>
     <h1 class="headline">Panda login - component</h1>
